--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
             <p>Terms</p>
             <p>Privacy</p>
           <div id="col5">
-            <i class="fax fa-facebook"></i>
+            <i class="fa fa-facebook"></i>
             <i class="fa fa-twitter"></i>
             <i class="fa fa-instagram"></i>
     
