--- a/index.html
+++ b/index.html
@@ -185,6 +185,7 @@
             <p>Contact Us</p>
             <p>Terms</p>
             <p>Privacy</p>
+          </div>
           <div id="col5">
             <i class="fa fa-facebook"></i>
             <i class="fa fa-twitter"></i>
