--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN"
       crossorigin="anonymous"
     />
-    <title>Document</title>
+    <title>Fylo Website</title>
   </head>
   <body>
     <section class="firstPage" id="up">
